# models/src/main/kotlin/ru/simohin/posusekam/models/entity/Category.kt
@@ -1,0 +1,26 @@
+package ru.simohin.posusekam.models.entity
+
+import jakarta.persistence.*
+import java.time.ZonedDateTime
+import java.util.UUID
+
+@Entity
+@Table(name = "categories", uniqueConstraints = [UniqueConstraint(columnNames = ["household_id", "name"])])
+data class Category(
+    @Id
+    @GeneratedValue(strategy = GenerationType.UUID)
+    val id: UUID? = null,
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "household_id", nullable = false)
+    val household: Household,
+
+    @Column(nullable = false)
+    var name: String,
+
+    @Column(nullable = true)
+    var icon: String? = null,
+
+    @Column(name = "created_at", insertable = false, updatable = false)
+    val createdAt: ZonedDateTime? = null
+)
