# models/src/main/kotlin/ru/simohin/posusekam/models/entity/MeasureUnit.kt
@@ -1,0 +1,23 @@
+package ru.simohin.posusekam.models.entity
+
+import jakarta.persistence.*
+import java.time.ZonedDateTime
+import java.util.UUID
+
+@Entity
+@Table(name = "measure_units", uniqueConstraints = [UniqueConstraint(columnNames = ["household_id", "name"])])
+data class MeasureUnit(
+    @Id
+    @GeneratedValue(strategy = GenerationType.UUID)
+    val id: UUID? = null,
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "household_id", nullable = false)
+    val household: Household,
+
+    @Column(nullable = false)
+    var name: String,
+
+    @Column(name = "created_at", insertable = false, updatable = false)
+    val createdAt: ZonedDateTime? = null
+)
